feat: build & compile mjml templates

--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "author": "railek <jean@railek.com>",
   "license": "MIT",
   "scripts": {
-    "create": "node ./scripts/index.js --create"
+    "create": "node ./scripts/index.js --create",
+    "build": "node ./scripts/index.js --build"
   },
   "dependencies": {
-    "chalk": "3.0.0",
-    "commander": "2.20.3",
-    "mkdirp": "0.5.5"
+    "chalk": "^3.0.0",
+    "commander": "^2.20.3",
+    "glob": "^7.1.5",
+    "inquirer": "^7.0.4",
+    "mjml": "^4.5.1",
+    "mkdirp": "^0.5.5"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^14.2.0",
